# trolley-indoor-explore

./: README.md
grid_path_searcher/: CMakeLists.txt  CMakeLists.txt~  package.xml
grid_path_searcher/include/: cloud_processor.h  ground_remove2.h  lidar_point.h
grid_path_searcher/launch/: demo1.launch
grid_path_searcher/launch/rviz_config/: demo1.rviz  layout.rviz  lidar.rviz  map.rviz  new.rviz
grid_path_searcher/src/: accumulate.cpp  cloud_processor.cpp  demo_node.cpp  ground_remove2.cpp
